--- a/projeto-ritmo-melodia/package.json
+++ b/projeto-ritmo-melodia/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
@@ -27,5 +33,10 @@
     "globals": "^15.11.0",
     "react-router-dom": "^6.27.0",
     "vite": "^5.4.9"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
