--- a/projeto-ritmo-melodia/package.json
+++ b/projeto-ritmo-melodia/package.json
@@ -19,11 +19,13 @@
     "express-validator": "^7.2.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.1",
+    "mongoose": "^8.8.2",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
