--- a/projeto-ritmo-melodia/package.json
+++ b/projeto-ritmo-melodia/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@tailwindcss/vite": "^4.1.11",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -25,7 +26,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
